--- a/src/app/draft-overview/draft-archives/draft-archives.component.html
+++ b/src/app/draft-overview/draft-archives/draft-archives.component.html
@@ -1,7 +1,7 @@
 <div class="p-2 m-2 border-2 bg-aTeam-100 rounded-xl border-aTeam-200">
   <div class="flex items-center px-6 py-1">
     <button
-      routerLink="/draft"
+      routerLink="/drafts"
       class="px-3 py-2 my-2 text-sm text-symbolColor-inverted rounded-md bg-menu-500 hover:bg-menu-600 focus:outline-none focus:bg-menu-600"
     >
       Back
