--- a/src/app/draft-overview/draft-form/draft-form-core/draft-form-core.component.html
+++ b/src/app/draft-overview/draft-form/draft-form-core/draft-form-core.component.html
@@ -25,28 +25,27 @@
       </div>
       <div>
         <label class="block mb-1 font-bold">Format</label>
-        <select
-          formControlName="format"
-          spellcheck="false"
-          class="w-full px-4 py-2 text-symbolColor-main text-center rounded-full shadow-md bg-aTeam-200 focus:outline-none focus:ring-2 focus:ring-aTeam-500 focus:bg-aTeam-100"
+        <div
+          class="w-full px-2 text-symbolColor-main text-center rounded-full shadow-md bg-aTeam-200 focus:outline-none focus:ring-2 focus:ring-aTeam-500 focus:bg-aTeam-100"
         >
-          <option value="" disabled selected>Select Format</option>
-          <option *ngFor="let format of formats" value="{{ format }}">
-            {{ format }}
-          </option>
-        </select>
+          <select-no-search
+            [items]="formats"
+            [placeholder]="'Select Format'"
+            formControlName="format"
+          ></select-no-search>
+        </div>
       </div>
       <div>
         <label class="block mb-1 font-bold">Ruleset</label>
-        <select
-          formControlName="ruleset"
-          class="w-full px-4 py-2 text-symbolColor-main text-center rounded-full shadow-md bg-aTeam-200 focus:outline-none focus:ring-2 focus:ring-aTeam-500 focus:bg-aTeam-100"
+        <div
+          class="w-full px-2 text-symbolColor-main text-center rounded-full shadow-md bg-aTeam-200 focus:outline-none focus:ring-2 focus:ring-aTeam-500 focus:bg-aTeam-100"
         >
-          <option value="" disabled selected>Select Ruleset</option>
-          <option *ngFor="let ruleset of rulesets" value="{{ ruleset }}">
-            {{ ruleset }}
-          </option>
-        </select>
+          <select-no-search
+            [items]="rulesets"
+            [placeholder]="'Select Ruleset'"
+            formControlName="ruleset"
+          ></select-no-search>
+        </div>
       </div>
     </div>
   </div>
