--- a/src/app/util/dropdowns/select/select-search.component.html
+++ b/src/app/util/dropdowns/select/select-search.component.html
@@ -1,5 +1,5 @@
 <div
-  class="relative w-full max-w-xs filter-container"
+  class="relative w-full filter-container"
   (click)="$event.stopPropagation()"
 >
   <!-- Value Box -->
@@ -37,7 +37,6 @@
         Clear
       </button>
     </div>
-
     <!-- Scrollable list -->
     <div class="p-0.5">
       <cdk-virtual-scroll-viewport
@@ -47,14 +46,16 @@
       >
         <div
           *cdkVirtualFor="let item of filteredItems"
-          class="mx-2 rounded py-0.5 flex justify-between px-1 cursor-pointer hover:bg-menu-200"
+          class="mx-2 rounded py-0.5 flex justify-between items-center px-1 cursor-pointer hover:bg-menu-200"
           [ngClass]="{
             'bg-menu-200': selectedItem && selectedItem.value === item.value
           }"
           (click)="selectItem(item)"
         >
           <span>{{ item.name }}</span>
-          <img class="aspect-auto" [src]="item.icon" />
+          <div *ngIf="item.icon">
+            <img [src]="item.icon" />
+          </div>
         </div>
       </cdk-virtual-scroll-viewport>
     </div>
