fix finder ruleset typo bug

--- a/src/app/planner/planner.component.html
+++ b/src/app/planner/planner.component.html
@@ -363,7 +363,7 @@
               class="h-full min-w-full overflow-y-auto"
               *ngIf="tabSelected == 3"
               [rulesetId]="
-                getDraftFormGroup().get('ruleset')?.value || 'Gen9 Draft'
+                getDraftFormGroup().get('ruleset')?.value || 'Gen9 NatDex'
               "
               [formatId]="getDraftFormGroup().get('format')?.value || 'Singles'"
             ></finder-core>
