make draft path dynamic

--- a/src/app/draft-overview/draft-stats/draft-stats.component.html
+++ b/src/app/draft-overview/draft-stats/draft-stats.component.html
@@ -1,6 +1,6 @@
 <div class="p-2 m-2 border-2 bg-aTeam-100 rounded-xl border-aTeam-200">
   <button
-    routerLink="/drafts"
+    [routerLink]="['/', draftPath]"
     class="px-3 py-2 my-2 text-sm text-symbolColor-inverted rounded-md bg-menu-500 hover:bg-menu-600 focus:outline-none focus:bg-menu-600"
   >
     Back
