--- a/src/app/matchup-overview/matchup-overview.component.html
+++ b/src/app/matchup-overview/matchup-overview.component.html
@@ -4,7 +4,7 @@
   <div class="flex px-2 pt-2">
     <div class="w-fit">
       <button
-        routerLink="/drafts/{{ leagueId }}"
+        routerLink="['/', draftPath]/{{ leagueId }}"
         class="px-3 py-2 text-sm text-symbolColor-inverted rounded-md bg-menu-500 hover:bg-menu-600 focus:outline-none focus:bg-menu-600"
       >
         Back
