--- a/src/app/draft-overview/draft-form/draft-form-edit/draft-form-edit.component.html
+++ b/src/app/draft-overview/draft-form/draft-form-edit/draft-form-edit.component.html
@@ -1,7 +1,7 @@
 <div class="p-2 m-2 border-2 bg-aTeam-100 rounded-xl border-aTeam-200">
   <div class="flex items-center space-x-4">
     <button
-      routerLink="/drafts/"
+      [routerLink]="['/', cancelPath]"
       class="p-2 m-3 rounded-lg shadow-md bg-aTeam-300 hover:shadow shadow-aTeam-600"
     >
       Cancel
