--- a/src/app/draft-overview/draft-preview/draft-preview.component.html
+++ b/src/app/draft-overview/draft-preview/draft-preview.component.html
@@ -40,7 +40,7 @@
         <div class="flex p-2" *ngIf="draft.menu == 'main'">
           <a
             class="flex-grow p-1 font-semibold text-center shadow h-fit bg-aTeam-300 hover:shadow shadow-aTeam-600 rounded-xl"
-            [routerLink]="'/drafts/' + draft.leagueId"
+            [routerLink]="['/', draftPath, draft.leagueId]"
             >Matches</a
           >
           <div class="grid items-center justify-center grid-cols-3 gap-2 px-2">
@@ -130,7 +130,7 @@
   </div>
   <div class="flex p-3">
     <button
-      routerLink="/drafts/new"
+      [routerLink]="['/', draftPath, 'new']"
       class="flex items-center p-1 rounded-lg shadow-md bg-aTeam-300 hover:shadow shadow-aTeam-600"
       title="Add League"
     >
@@ -138,7 +138,7 @@
     </button>
     <div class="flex-grow"></div>
     <button
-      routerLink="/drafts/archives"
+      [routerLink]="['/', draftPath, 'archives']"
       class="flex items-center p-1 rounded-lg shadow-md bg-aTeam-300 hover:shadow shadow-aTeam-600"
       title="Archives"
     >
