--- a/src/app/opponent-overview/opponent-form/opponent-form-new/opponent-form-new.component.html
+++ b/src/app/opponent-overview/opponent-form/opponent-form-new/opponent-form-new.component.html
@@ -1,6 +1,6 @@
 <div class="flex items-center space-x-4">
   <button
-    [routerLink]="'/drafts/' + teamId"
+    [routerLink]="['/', draftPath, teamId]"
     class="p-2 m-3 bg-bTeam-300 rounded-lg shadow-md hover:shadow shadow-bTeam-600"
   >
     Cancel
