--- a/src/app/opponent-overview/opponent-score/opponent-score.component.html
+++ b/src/app/opponent-overview/opponent-score/opponent-score.component.html
@@ -2,7 +2,7 @@
 <form *ngIf="scoreForm" [formGroup]="scoreForm">
   <div class="flex px-2 w-fleft-px">
     <button
-      [routerLink]="'/drafts/' + teamId"
+      [routerLink]="['/', draftPath, teamId]"
       class="p-2 font-medium text-symbolColor-inverted rounded-md shadow-sm bg-menu-500 hover:bg-menu-700 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-menu-500"
     >
       Cancel
