fix A and M in font

--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -3,7 +3,7 @@
     <h1
       class="hidden p-1 text-5xl font-semibold lg:text-6xl md:block text-logo-bottom font-nasa w-fit"
     >
-      POKEМON
+      POKEMON
     </h1>
     <div class="h-16 w-16">
       <logo-small-svg />
@@ -12,7 +12,7 @@
       <h1
         class="px-1 text-4xl font-semibold sm:text-5xl lg:text-6xl md:hidden text-logo-bottom font-nasa w-fit"
       >
-        POKEМON
+        POKEMON
       </h1>
       <h1
         class="order-3 px-1 text-4xl font-semibold sm:text-5xl lg:text-6xl text-logo-top font-nasa w-fit"
