change drafts to My Drafts

--- a/src/app/draft-overview/draft-preview/draft-preview.component.html
+++ b/src/app/draft-overview/draft-preview/draft-preview.component.html
@@ -1,6 +1,6 @@
 <div class="p-2 m-2 border-2 bg-aTeam-100 rounded-xl border-aTeam-200">
   <div class="flex items-center px-6 py-1">
-    <p class="text-3xl font-bold">Drafts</p>
+    <p class="text-2xl font-nasa font-bold">My Drafts</p>
   </div>
   <loading *ngIf="!drafts"></loading>
   <div
