--- a/src/app/draft-overview/draft-archives/draft-archives.component.html
+++ b/src/app/draft-overview/draft-archives/draft-archives.component.html
@@ -6,7 +6,7 @@
     >
       Back
     </button>
-    <p class="px-6 text-3xl font-bold">Archived Drafts</p>
+    <p class="px-6 text-2xl font-nasa font-bold">Archived Drafts</p>
   </div>
   <loading *ngIf="!archives"></loading>
   <div
