fix save to new league

--- a/src/app/planner/planner.component.html
+++ b/src/app/planner/planner.component.html
@@ -127,7 +127,7 @@
         </div>
         <button
           class="p-0.5 border-2 text-sm font-semibold rounded hover:bg-menu-300 bg-menu-100 border-menu-400"
-          routerLink="['/', draftPath]/new"
+          [routerLink]="['/', draftPath, 'new']"
           [queryParams]="{
             team: team,
             format: plannerForm.get('format')?.value,
